CSS alignment fix

--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ body {
     font-size:110%;
 }
 
-nav ul, footer ul, p, {
+nav ul, footer ul {
     float: right;
     padding: 0px;
     list-style: none;
@@ -21,13 +21,11 @@ nav ul, footer ul, p, {
 }
 p {
     padding: 10px;
-    list-style: none;
     line-height:135%;
-    max-width: 50em;
+    max-width: 45em;
 }
 h1, h2, h3, h4, h5, h6 {
     padding: 0px;
-    list-style: none;
 }
 nav ul li, footer ul li {
     display: inline;
